src/test/ui/issues/issue-25579.mir.stderr
error: compilation successful
  --> $DIR/issue-25579.rs:21:1
   |
LL | / fn main() { //[mir]~ ERROR compilation successful
LL | | }
   | |_^

error: aborting due to previous error

